====================

2.0.0-RC1 - 04/26/2015
----------------------

* Added ThemeForest update system.
* Added "Save Options" button to individual sections of Theme Options page.
* Added "Naked Page" page template, which outputs a standard page with content background.
* Improved responsive display of Tabs element and `[tabs]` shortcode.
* Improved thumbnail link hover icons.
* Fixed: Header text option not outputting correctly with more than two icons.
* Fixed: Product columns selections in WooCommerce theme options.
* Fixed: Chat post format is supported, but wasn't registered.
* Fixed: Image center alignment issues.
* Fixed: With ThemeForest update system, disabling backups didn't work.
* Fixed: When logged in, frontend lightbox will now display over admin bar.
* Fixed: Sanitize out quotation marks when saving Google font name in typography Theme Options.
* Fixed: Simple slider captions sitting on top of linked image slides.
* Fixed: "Read More Text" option for post list and post grid builder element and shortcodes.
* Fixed: Allow `themeblvd_grid_class()` to pull proper class for a 1/12 or 1/10 column, when given an integer representing number of equal height columns; previously only allowed integers 1-6.
* Fixed: Security vulnerabilities from `add_query_arg()` (see [here](https://make.wordpress.org/plugins/2015/04/20/fixing-add_query_arg-and-remove_query_arg-usage/)).
* Updated to Bootstrap 3.3.4.

--------------------------------------------------------------

2.0.0-beta3 - 04/01/2015
------------------------

* Added WooCommerce support.
* Added Gravity Forms support.
* Added "Sidebar Widgets" styling section to Theme Options for all theme bases.
* Added theme support for `title-tag` in WP 4.1+
* Added a little design flare to alert component, to look less Bootstrap'ish.
* Added "tb_square_medium" crop size, 500x500.