@@ -6,22 +6,22 @@
 }
 
 /* General font size */
+#bbpress-forums,
 #bbpress-forums ul.bbp-lead-topic,
 #bbpress-forums ul.bbp-topics,
 #bbpress-forums ul.bbp-forums,
 #bbpress-forums ul.bbp-replies,
-#bbpress-forums ul.bbp-search-results {
-	font-size: 14px;
+#bbpress-forums ul.bbp-search-results,
+.bbp-topics-front ul.super-sticky,
+.bbp-topics ul.super-sticky,
+.bbp-topics ul.sticky,
+.bbp-forum-content ul.sticky {
+	font-size: 1rem;
 }
 
 /* Wrap forums */
-.forum .entry-title {
-	margin-bottom: 20px;
-}
 #bbpress-forums ul.bbp-topics,
-#bbpress-forums ul.bbp-forums,
-#bbpress-forums ul.bbp-replies,
-#bbpress-forums ul.bbp-search-results {
+#bbpress-forums ul.bbp-forums {
 	border: 1px solid #dddddd;
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
@@ -43,9 +43,12 @@
 }
 
 /* Forum listing rows */
+#bbpress-forums .bbp-body {
+	background: #ffffff;
+}
 #bbpress-forums li.bbp-body ul.forum,
 #bbpress-forums li.bbp-body ul.topic {
-	background: transparent;
+	background: #ffffff;
 	border: none;
 	border-bottom: 1px solid #dddddd;
 	padding: 12px 0 10px 15px;
@@ -119,7 +122,7 @@
 	margin-top: 10px;
 }
 .type-topic .bbp-pagination-links .pagination {
-	margin: 10px 0;
+	margin: 10px 0 30px 0;
 }
 .bbp-pagination-links a {
 	border-color: #cccccc;
@@ -261,133 +264,17 @@ span.bbp-admin-links a {
 #bbpress-forums .status-closed a {
 	color: #cccccc;
 }
+#bbpress-forums .bbp-forums-list {
+	margin: 5px 0 5px 10px;
+}
 #bbpress-forums .bbp-forums-list li {
-	font-size: 12px;
+	font-size: 1rem;
 }
 #bbpress-forums ul.topic .bbp-topic-voice-count,
 #bbpress-forums ul.topic .bbp-topic-reply-count,
 #bbpress-forums ul.topic .bbp-topic-freshness {
 	line-height: 1.2;
 	padding-top: 2px;
-}
-
-/* Replies */
-#bbpress-forums ul.bbp-replies {
-	border: none;
-	border-radius: 0;
-}
-#bbpress-forums li.bbp-header .bbp-search-content,
-#bbpress-forums li.bbp-footer .bbp-search-content,
-#bbpress-forums li.bbp-header .bbp-forum-content,
-#bbpress-forums li.bbp-footer .bbp-forum-content,
-#bbpress-forums li.bbp-header .bbp-topic-content,
-#bbpress-forums li.bbp-footer .bbp-topic-content,
-#bbpress-forums li.bbp-header .bbp-reply-content,
-#bbpress-forums li.bbp-footer .bbp-reply-content {
-	margin-left: 0;
-}
-#bbpress-forums ul.bbp-replies > .bbp-header {
-	background: transparent;
-	border: none;
-	-webkit-box-shadow: none;
-	box-shadow: none;
-	display: none;
-	padding: 0 0 10px 0;
-	visibility: hidden;
-}
-#bbpress-forums ul.bbp-replies .bbp-header .bbp-reply-content span {
-	visibility: visible;
-}
-#bbpress-forums ul.bbp-replies .bbp-reply-header {
-	background: transparent;
-	border: none;
-	font-size: 12px;
-	margin: 0 0 0 18%;
-	padding: 5px;
-}
-#bbpress-forums ul.bbp-replies .bbp-reply-header .bbp-reply-post-date:before {
-	content: "\f017";
-	font-family: 'fontawesome';
-	margin-right: 3px;
-}
-#bbpress-forums ul.bbp-replies .topic,
-#bbpress-forums ul.bbp-replies .reply {
-	background: transparent;
-	padding: 0 0 20px 0;
-}
-#bbpress-forums ul.bbp-replies li.bbp-body > .topic:last-child,
-#bbpress-forums ul.bbp-replies li.bbp-body > .reply:last-child {
-	padding-bottom: 0;
-}
-.single-topic #bbpress-forums div.bbp-reply-author,
-.forum-search #bbpress-forums div.bbp-reply-author,
-.bbp-user-page #bbpress-forums div.bbp-reply-author,
-.forum-search #bbpress-forums div.bbp-topic-author {
-	float: left;
-	position: relative;
-	width: 18%;
-}
-.bbp-replies .bbp-reply-author::before,
-.forum-search .bbp-reply-author::before {
-	content: "";
-	background: #ffffff;
-	border-color: #dddddd;
-	border-left-style: solid;
-	border-bottom-style: solid;
-	border-left-width: 1px;
-	border-bottom-width: 1px;
-	margin-left: -7px;
-	position: absolute;
-	top: 25px;
-	left: 100%;
-	-webkit-transform: rotate(45deg);
-	-moz-transform: rotate(45deg);
-	transform: rotate(45deg);
-	width: 14px;
-	height: 14px;
-	z-index: 100;
-}
-#bbpress-forums div.bbp-topic-author,
-#bbpress-forums div.bbp-reply-author {
-	margin: 0;
-	padding-right: 30px;
-}
-#bbpress-forums div.bbp-topic-author a,
-#bbpress-forums div.bbp-reply-author a {
-	display: block;
-}
-#bbpress-forums div.bbp-topic-author a.bbp-author-name,
-#bbpress-forums div.bbp-reply-author a.bbp-author-name {
-	line-height: 1.3;
-	margin: 7px 0 0 0;
-	word-break: normal;
-}
-#bbpress-forums div.bbp-topic-author img.avatar,
-#bbpress-forums div.bbp-reply-author img.avatar {
-	margin-top: 0;
-	max-width: 60px;
-}
-span.bbp-author-ip {
-	display: block;
-	line-height: 1.3;
-	margin-top: 5px;
-	word-wrap: break-word;
-}
-#bbpress-forums .bbp-body div.bbp-topic-content,
-#bbpress-forums .bbp-body div.bbp-reply-content {
-	background: #ffffff; /* Matches BG of arrow above */
-	border: 1px solid #dddddd;
-	border-radius: 2px;
-	float: left;
-	margin: 0;
-	min-height: 120px;
-	position: relative;
-	padding: 7px 20px;
-	width: 82%;
-}
-.bbp-topic-content p,
-.bbp-reply-content p {
-	margin: 10px 0;
 }
 
 /* Lead Topic */
@@ -429,24 +316,14 @@ span.bbp-author-ip {
 	background: #f9f9f9;
 	border: none;
 	border-bottom: 1px solid #dddddd;
+	color: #888888;
 	font-size: 12px;
 	line-height: 1;
-	padding: 10px;
+	padding: 10px 16px;
 }
 #bbpress-forums .tb-lead-topic li.bbp-body div.hentry {
 	background: #ffffff;
 	padding: 20px 10px;
-}
-#bbpress-forums .tb-lead-topic div.bbp-topic-author {
-	margin: 5px 0 0 0;
-	padding: 0;
-	width: 15%;
-}
-#bbpress-forums .tb-lead-topic div.bbp-topic-content {
-	border: none;
-	padding: 0;
-	overflow: hidden;
-	padding: 0 10px;
 }
 #bbpress-forums .tb-lead-topic div.bbp-topic-content p {
 	margin: 0 0 20px 0;
@@ -469,12 +346,37 @@ span.bbp-author-ip {
 	margin-right: 5px;
 }
 
-/* Reply Form */
-.bbp-topic-form,
-.bbp-reply-form {
+/* Replies */
+#bbpress-forums .bbp-body {
+	background-color: transparent;
+}
+#bbpress-forums ul.bbp-replies,
+#bbpress-forums ul.bbp-search-results {
+	border: none;
+	margin-bottom: 0;
+}
+#bbpress-forums ul.bbp-replies .bbp-reply-header {
+	background: #f9f9f9;
 	border: 1px solid #dddddd;
-	border-radius: 2px;
-	padding: 20px;
+	border-bottom: none;
+	color: #888888;
+	font-size: 12px;
+}
+#bbpress-forums div.reply {
+	background: #ffffff;
+	border: 1px solid #dddddd;
+	margin-bottom: 20px;
+}
+#bbpress-forums div.reply:last-child {
+	margin-bottom: 0;
+}
+
+/* New Topic/Reply Form */
+.bbp-topic-form,
+.bbp-reply-form { /* matches default theme comments form */
+	background: #ffffff;
+	margin-top: 50px;
+	padding: 30px;
 }
 #bbpress-forums .bbp-topic-form fieldset.bbp-form,
 #bbpress-forums .bbp-reply-form fieldset.bbp-form {
@@ -550,7 +452,8 @@ p.bbp-user-reply-count {
 	display: none;
 }
 .bbp-user-home #bbp-user-favorites li.bbp-body ul.topic,
-.bbp-user-home #bbp-user-subscriptions li.bbp-body ul.forum {
+.bbp-user-home #bbp-user-subscriptions li.bbp-body ul.forum,
+.bbp-user-home #bbp-user-subscriptions li.bbp-body ul.topic {
 	padding-left: 40px;
 	position: relative;
 }
@@ -676,9 +579,7 @@ div.bbp-submit-wrapper {
 /* Wrap forums */
 .content_dark #bbpress-forums ul.bbp-lead-topic,
 .content_dark #bbpress-forums ul.bbp-topics,
-.content_dark #bbpress-forums ul.bbp-forums,
-.content_dark #bbpress-forums ul.bbp-replies,
-.content_dark #bbpress-forums ul.bbp-search-results {
+.content_dark #bbpress-forums ul.bbp-forums {
 	border-color: #000000;
 }
 
@@ -691,8 +592,12 @@ div.bbp-submit-wrapper {
 }
 
 /* Forum listing rows */
+.content_dark #bbpress-forums .bbp-body {
+	background: #222222;
+}
 .content_dark #bbpress-forums li.bbp-body ul.forum,
 .content_dark #bbpress-forums li.bbp-body ul.topic {
+	background-color: #202020;
 	border-bottom-color: #000000;
 }
 
@@ -737,6 +642,11 @@ div.bbp-submit-wrapper {
 .content_dark span.bbp-admin-links a {
 	color: #cccccc;
 }
+.content_dark #bbpress-forums .bbp-topic-content ul.bbp-topic-revision-log,
+.content_dark #bbpress-forums .bbp-reply-content ul.bbp-topic-revision-log,
+.content_dark #bbpress-forums .bbp-reply-content ul.bbp-reply-revision-log {
+	border-color: #000000;
+}
 
 /* List Topics and Forums */
 .content_dark #bbpress-forums .status-closed,
@@ -754,46 +664,44 @@ div.bbp-submit-wrapper {
 	color: #ffffff;
 }
 
-/* Replies */
-.content_dark .bbp-replies .bbp-reply-author::before,
-.content_dark .forum-search .bbp-reply-author::before {
-	background: #202020;
-	border-color: #000000;
-}
-.content_dark #bbpress-forums div.bbp-topic-content,
-.content_dark #bbpress-forums div.bbp-reply-content {
-	background: #202020; /* Matches BG of arrow above */
-	border-color: #000000;
-}
-.content_dark #bbpress-forums .bbp-topic-content ul.bbp-topic-revision-log,
-.content_dark #bbpress-forums .bbp-reply-content ul.bbp-topic-revision-log,
-.content_dark #bbpress-forums .bbp-reply-content ul.bbp-reply-revision-log {
-	border-top-color: #000000;
-}
-
 /* Lead Topic */
 .content_dark #bbpress-forums .tb-lead-topic > .wrap {
 	background: #202020;
 	border-color: #000000;
 }
-.content_dark #bbpress-forums .tb-lead-topic li.bbp-body div.hentry {
-	background: #202020;
-}
 .content_dark #bbpress-forums .tb-lead-topic .lead-topic-header {
 	background: #0c0c0c;
-	-webkit-box-shadow: inset 0 1px rgba(0 0,0,0,.9);
-	box-shadow: inset 0 1px 0 rgba(0,0,0,.9);
+	-webkit-box-shadow: inset 0 1px rgba(255,255,255,.1);
+	box-shadow: inset 0 1px 0 rgba(255,255,255,.1);
 	border-bottom-color: #000000;
 }
 .content_dark #bbpress-forums .tb-lead-topic div.bbp-topic-header {
 	background: #202020;
 	border-bottom-color: #000000;
+	color: #ffffff;
+}
+.content_dark #bbpress-forums .tb-lead-topic li.bbp-body div.hentry {
+	background: #222222;
 }
 
-/* Reply Form */
+/* Replies */
+.content_dark #bbpress-forums .bbp-body {
+	background-color: transparent;
+}
+.content_dark #bbpress-forums ul.bbp-replies .bbp-reply-header {
+	background: #202020;
+	border-color: #000000;
+	color: #ffffff;
+}
+.content_dark #bbpress-forums div.reply {
+	border-color: #000000;
+	background-color: #222222;
+}
+
+/* New Topic/Reply Form */
 .content_dark .bbp-topic-form,
 .content_dark .bbp-reply-form {
-	border-color: #000000;
+	background: #222222; /* matches default theme comments form */
 }
 .content_dark #bbpress-forums div.bbp-the-content-wrapper {
 	border-color: #000000;
@@ -853,42 +761,6 @@ body.rtl .bbp-body .topic .bbp-topic-title:before {
 	left: inherit;
 }
 
-/* Replies */
-body.rtl #bbpress-forums ul.bbp-replies .bbp-reply-header {
-	margin: 0 18% 0 0;
-}
-body.rtl #bbpress-forums div.bbp-topic-author,
-body.rtl #bbpress-forums div.bbp-reply-author {
-	padding-right: 0;
-	padding-left: 30px;
-}
-body.rtl .bbp-replies .bbp-reply-author::before,
-body.rtl .forum-search .bbp-reply-author::before {
-	border-bottom-width: 0;
-	border-left-width: 0;
-	margin-left: 0;
-	border-top-width: 1px;
-	border-top-style: solid;
-	border-right-style: solid;
-	border-right-width: 1px;
-	margin-right: -7px;
-	right: 100%;
-	left: initial;
-}
-body.rtl.single-topic #bbpress-forums div.bbp-reply-author,
-body.rtl .forum-search #bbpress-forums div.bbp-reply-author,
-body.rtl .bbp-user-page #bbpress-forums div.bbp-reply-author,
-body.rtl .forum-search #bbpress-forums div.bbp-topic-author {
-	float: right;
-}
-body.rtl.bbp-replies .bbp-reply-author::before,
-body.rtl.forum-search .bbp-reply-author::before {
-	margin-left: 0;
-	margin-right: -7px;
-	right: 100%;
-	left: inherit;
-}
-
 /* Lead Topic */
 body.rtl #bbpress-forums .tb-lead-topic .tb-bbp-buttons {
 	float: right;
@@ -911,7 +783,8 @@ body.rtl #bbpress-forums #bbp-single-user-details #bbp-user-navigation {
 	margin-left: 0;
 }
 body.rtl.bbp-user-home #bbp-user-favorites li.bbp-body ul.topic,
-body.rtl.bbp-user-home #bbp-user-subscriptions li.bbp-body ul.forum {
+body.rtl.bbp-user-home #bbp-user-subscriptions li.bbp-body ul.forum,
+body.rtl.bbp-user-home #bbp-user-subscriptions li.bbp-body ul.topic {
 	padding-right: 40px;
 	padding-left: 0;
 }
@@ -982,11 +855,26 @@ body.rtl .widget_display_stats dt {
 		display: none;
 	}
 
-	/* Replies */
-	#bbpress-forums ul.bbp-replies .bbp-reply-header {
-		margin: 0;
-		padding: 5px 0;
+	/* Lead Topic */
+	#bbpress-forums .tb-lead-topic li.bbp-body div.hentry {
+		padding-right: 30px;
+		padding-left: 30px;
 	}
+	#bbpress-forums .tb-lead-topic div.bbp-topic-author {
+		float: none;
+		margin: 0;
+		width: auto;
+	}
+	#bbpress-forums .tb-lead-topic div.bbp-topic-author {
+		padding: 0;
+	}
+	#bbpress-forums .tb-lead-topic .bbp-tags,
+	#bbpress-forums .tb-lead-topic .tb-bbp-buttons
+	#bbpress-forums .tb-bbp-buttons.topic-subscribe > span {
+		float: none;
+	}
+
+	/* Replies */
 	span.bbp-admin-links {
 		display: none;
 	}
@@ -1034,7 +922,14 @@ body.rtl .widget_display_stats dt {
 	#bbpress-forums div.bbp-reply-author a.bbp-author-name,
 	#bbpress-forums .bbp-author-role {
 		display: inline-block;
-		margin: 0 2px;
+		margin: 0;
+	}
+	#bbpress-forums .bbp-author-role {
+		margin-left: 5px;
+	}
+	.rtl #bbpress-forums .bbp-author-role {
+		margin-right: 5px;
+		margin-left: 0;
 	}
 	#bbpress-forums .bbp-author-role:before {
 		content: "(";
@@ -1048,29 +943,25 @@ body.rtl .widget_display_stats dt {
 	}
 	#bbpress-forums div.bbp-topic-author img.avatar,
 	#bbpress-forums div.bbp-reply-author img.avatar {
+		margin-top: 0;
+		margin-right: 10px;
 		position: static;
 		width: 30px;
+	}
+	.rtl #bbpress-forums div.bbp-topic-author img.avatar,
+	.rtl #bbpress-forums div.bbp-reply-author img.avatar {
+		margin-right: 0;
+		margin-left: 10px;
 	}
 	#bbpress-forums .bbp-body div.bbp-topic-content,
 	#bbpress-forums .bbp-body div.bbp-reply-content {
 		float: none;
-		min-height: none;
-		width: auto;
-	}
-
-	/* Lead Topic */
-	#bbpress-forums .tb-lead-topic div.bbp-topic-author {
-		float: none;
 		margin: 0;
+		padding: 12px 0;
 		width: auto;
 	}
-	#bbpress-forums .tb-lead-topic div.bbp-topic-author {
-		padding: 0 10px 5px 10px;
-	}
-	#bbpress-forums .tb-lead-topic .bbp-tags,
-	#bbpress-forums .tb-lead-topic .tb-bbp-buttons
-	#bbpress-forums .tb-bbp-buttons.topic-subscribe > span {
-		float: none;
+	#bbpress-forums div.reply {
+		padding: 20px;
 	}
 
 	/* User Profiles */
